bag in the function menuDell